fixing overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
 }
 .vp-height {
   height: 80vh;
+  overflow-y: auto;
 }
 .modal-alert {
   position: absolute;
@@ -61,3 +62,8 @@
   height: 400px;
 }
 .sm-font{font-size:12px;}
+@media only screen and (max-width: 1024px) {
+  .vp-height {
+    height: auto;
+  }
+}
